<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9DFF1"
    tools:context=".DetailActivity">


    <ImageView
        android:id="@+id/plano"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:background="#60161C"
        android:contentDescription="@string/plano"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/titulo_CatedralN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_catedral"
        android:layout_width="411dp"
        android:layout_height="218dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/image_catedral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/catedral"
        tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />


    <TextView
        android:id="@+id/Paris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="650dp"
        android:background="#3A0D11"
        android:gravity="center"
        android:text="@string/la_catedral_de_notre_dame"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_menu" />

    <TextView
        android:id="@+id/ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="#675859"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plano"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_temperatura"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/temperatura"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plano" />

    <TextView
        android:id="@+id/titulo_CatedralN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/informacion"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plano" />

    <TextView
        android:id="@+id/text_BinaryTeam"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="#3A0D11"
        android:gravity="center"
        android:text="@string/copyright_binary_team"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plano"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/Paris"
        app:layout_constraintStart_toEndOf="@+id/image_catedral"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>