<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="#D7E4F3"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="2dp"
    card_view:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/referencia" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/arco_del_triunfo"
            android:textColor="#B3171D"
            android:textSize="22sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/item_image"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/Ver"
            android:textColor="#6E0C10"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/item_image"
            card_view:layout_constraintTop_toBottomOf="@id/item_title" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="40dp"
            android:numStars="5"
            android:progressBackgroundTint="@android:color/holo_orange_dark"
            android:progressTint="@android:color/holo_orange_dark"
            android:rating="4"
            android:scaleX="0.7"
            android:scaleY="0.75"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.872"
            card_view:layout_constraintStart_toEndOf="@id/item_image"
            card_view:layout_constraintTop_toBottomOf="@id/item_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>